--- a/template/css/bootstrap.css
+++ b/template/css/bootstrap.css
@@ -3944,31 +3944,42 @@ input[type="button"].btn-block {
 }
 
 .navbar-brand {
-  
+	
+  font-family: 'Comfortaa', sans-serif!important;  
   display: inline-block;
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
   margin-right: 1rem;
-  font-size: 1.25rem;
-  letter-spacing: 0.5rem;
+  font-size: 1rem;
+  letter-spacing: normal;
   line-height: inherit;
   white-space: nowrap;
 }
 @media (min-width: 320px){
 	.navbar-brand{
 		letter-spacing:normal;
+		font-size: 1.3rem;
 	}
 }
 @media (min-width: 768px){
-	.navebar-brand{
-		letter-spacing:normal;
+	.navbar-brand{
+		letter-spacing:0.5rem;
+		font-size: 1.5rem;
 	}
 }
 @media (min-width: 992px){
 	.navbar-brand{
 		letter-spacing: 0.5rem;
+		font-size: 2rem;
 	}
 }
+@media (min-width: 1200){
+	.navbar-brand{
+		letter-spacing: 0.5rem;
+		font-size: 2.5rem;
+	}
+}
+
 
 .navbar-brand:hover, .navbar-brand:focus {
   text-decoration: none;
@@ -3986,13 +3997,13 @@ input[type="button"].btn-block {
 }
 
 .navbar-nav .nav-link {
-  font-size:1.5rem;
+  font-size:1rem;
   padding-right: 0;
   padding-left: 0;
 }
 @media (min-width:768px){
 	.navbar-nav .nav-link {
-		font-size:0.5rem;
+		font-size:0.8rem;
 	}
 }
 @media (min-width:992px){
