--- a/template/css/styles.css
+++ b/template/css/styles.css
@@ -1,3 +1,11 @@
+.goal{
+	text-align: center;
+	margin-top: 20px;
+	font-size:1rem;
+}
+main{
+	padding-bottom: 10px;
+}
 @media (min-width: 544px) {  
   .goal {font-size:0.9rem;}
 	footer{font-size:0.5rem!important;}
@@ -17,11 +25,7 @@
   .goal {font-size:2rem;}
 }
 
-.goal{
-	text-align: center;
-	margin-top: 20px;
-	font-size:0.9rem;
-}
+
 a:link {
     color: #2F430E;
 }
